@@ -58,6 +58,12 @@ public class Controllers {
 		initialize();
 		getManager().removeListener(listener);
 	}
+	
+	/** Removes every global {@link ControllerListener} previously added. */
+	static public void clearListeners () {
+		initialize();
+		getManager().clearListeners();
+	}
 
 	static private ControllerManager getManager () {
 		return managers.get(Gdx.app);
