@@ -1,6 +1,7 @@
 [1.5.5]
 - API Change: 3D Animation, NodeAnimation keyframes are separated into translation, rotation and scaling
 - Added capability to enable color markup from inside skin json file.
+- API Change: Exposed method ControllerManager#clearListeners on Controllers class
 
 [1.5.4]
 - Added support for image layers in Tiled maps (TiledMapImageLayer)
